fix jumping line due to overflow on birthday text

--- a/packages/nouns-webapp/src/components/ExploreNounDetail/ExploreNounDetail.module.css
+++ b/packages/nouns-webapp/src/components/ExploreNounDetail/ExploreNounDetail.module.css
@@ -131,6 +131,9 @@
     z-index: 1;
     width: 100%;
 }
+.nounBirthday > div span {
+    white-space: pre-wrap;
+}
 .nounBirthday > div {
     opacity: 0.6;
     font-size: 0.8rem;
